<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:layout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ToggleButton
        android:id="@+id/tgGoingtoUff"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:checked="true"
        android:textOff="@string/going_to_uff"
        android:textOn="@string/going_to_uff" />

    <ToggleButton
        android:id="@+id/tgLeavingUff"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:checked="false"
        android:textOff="@string/leaving_uff"
        android:textOn="@string/leaving_uff" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city" />

    <Spinner
        android:id="@+id/spCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zone" />

    <Spinner
        android:id="@+id/spZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/neighborhood" />

    <Spinner
        android:id="@+id/spNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campus" />

    <Spinner
        android:id="@+id/spCampus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spots" />

    <Spinner
        android:id="@+id/spSpots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" />


    <EditText
        android:id="@+id/etRideDesc"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/ride_description" />


    <Button
        android:id="@+id/btDate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/set_date" />

    <Button
        android:id="@+id/btTime"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="@string/set_time" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btDate"
        android:layout_marginStart="50dp"
        android:text="Date" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btTime"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="Date" />


    <Button
        android:id="@+id/btShareRide"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/share_ride" />

    <Button
        android:id="@+id/btCancelRide"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:text="@string/cancel" />


</ScrollView>